@@ -13,6 +13,11 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+Remove unused parameter.
+ include/sproto.h
+ server/spell_effect.c spell_util.c
+Nicolas Weeger 2008-03-29
+
 Use safe string functions.
  server/build_map.c
 Nicolas Weeger 2008-03-29
